{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 163,
  "lineage": "3cff931d-7251-bdaf-9282-2dae2648ec68",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.191.19",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-03-31T13:20:41.007-07:00",
            "id": "projects/orangenoise-909/regions/us-west1/addresses/windows-instance-ip",
            "name": "windows-instance-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "orangenoise-909",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/addresses/windows-instance-ip"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-allow-all-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.688-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/dev-vpc-egress-allow-all",
            "log_config": [],
            "name": "dev-vpc-egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-dev-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/dev-vpc-egress-allow-all",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devnet",
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-allow-all-management-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.713-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/management-vpc-egress-allow-all",
            "log_config": [],
            "name": "management-vpc-egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/management-vpc-egress-allow-all",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-allow-all-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.689-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/prod-vpc-egress-allow-all",
            "log_config": [],
            "name": "prod-vpc-egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-prod-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/prod-vpc-egress-allow-all",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.prodnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-allow-all-staging-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.822-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/staging-vpc-egress-allow-all",
            "log_config": [],
            "name": "staging-vpc-egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-staging-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/staging-vpc-egress-allow-all",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.stagingnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-allow-rdp-management-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:49.793-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/management-vpc-ingress-allow-rdp",
            "log_config": [],
            "name": "management-vpc-ingress-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/management-vpc-ingress-allow-rdp",
            "source_ranges": [
              "73.59.83.115"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-allow-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:39.108-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/dev-vpc-internal-allow",
            "log_config": [],
            "name": "dev-vpc-internal-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-dev-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/dev-vpc-internal-allow",
            "source_ranges": [
              "10.1.0.0/22",
              "10.1.4.0/22"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.devnet",
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-allow-management-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.737-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/managmenet-vpc-internal-allow",
            "log_config": [],
            "name": "managmenet-vpc-internal-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/managmenet-vpc-internal-allow",
            "source_ranges": [
              "10.1.0.0/22",
              "10.1.12.0/22",
              "10.1.4.0/22",
              "10.1.8.0/22"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-allow-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:39.006-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/prod-vpc-internal-allow",
            "log_config": [],
            "name": "prod-vpc-internal-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-prod-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/prod-vpc-internal-allow",
            "source_ranges": [
              "10.1.0.0/22",
              "10.1.12.0/22"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.prodnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-allow-staging-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:38.736-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/orangenoise-909/global/firewalls/staging-vpc-internal-allow",
            "log_config": [],
            "name": "staging-vpc-internal-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-staging-vpc",
            "priority": 1000,
            "project": "orangenoise-909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/firewalls/staging-vpc-internal-allow",
            "source_ranges": [
              "10.1.0.0/22",
              "10.1.8.0/22"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.stagingnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "windows_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230315",
                    "size": 128,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/zones/us-west1-b/disks/on-jh01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/orangenoise-909/zones/us-west1-b/instances/on-jh01",
            "instance_id": "7537677687897914955",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "pMTR2ee6fns=",
            "name": "on-jh01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.191.19",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
                "network_ip": "10.1.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/mgmt-subnet-us-west1",
                "subnetwork_project": "orangenoise-909"
              }
            ],
            "project": "orangenoise-909",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/zones/us-west1-b/instances/on-jh01",
            "service_account": [
              {
                "email": "640990575057-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-rdp"
            ],
            "tags_fingerprint": "NrBVXn9x9_Q=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "windows_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230315",
                    "size": 128,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/zones/us-west1-b/disks/on-ad01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/orangenoise-909/zones/us-west1-b/instances/on-ad01",
            "instance_id": "5738135856012263011",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "pMTR2ee6fns=",
            "name": "on-ad01",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/mgmt-subnet-us-west1",
                "subnetwork_project": "orangenoise-909"
              }
            ],
            "project": "orangenoise-909",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/zones/us-west1-b/instances/on-ad01",
            "service_account": [
              {
                "email": "640990575057-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/orangenoise-909/global/networks/orangenoise-dev-vpc",
            "mtu": 0,
            "name": "orangenoise-dev-vpc",
            "project": "orangenoise-909",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-dev-vpc"
          },
          "dependencies": [
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mgmtnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "mtu": 0,
            "name": "orangenoise-managemnet-vpc",
            "project": "orangenoise-909",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc"
          },
          "dependencies": [
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prodnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/orangenoise-909/global/networks/orangenoise-prod-vpc",
            "mtu": 0,
            "name": "orangenoise-prod-vpc",
            "project": "orangenoise-909",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-prod-vpc"
          },
          "dependencies": [
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "stagingnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/orangenoise-909/global/networks/orangenoise-staging-vpc",
            "mtu": 0,
            "name": "orangenoise-staging-vpc",
            "project": "orangenoise-909",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-staging-vpc"
          },
          "dependencies": [
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-03-31T13:20:27.916-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/orangenoise-909/regions/us-west1/routers/cloud-router-us-west1",
            "name": "cloud-router-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "project": "orangenoise-909",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/routers/cloud-router-us-west1"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "orangenoise-909/us-west1/cloud-router-us-west1/nat-gateway-us-west1",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway-us-west1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "orangenoise-909",
            "region": "us-west1",
            "router": "cloud-router-us-west1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_router.router",
            "google_compute_subnetwork.mgmtsubnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "devsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-31T13:19:35.905-07:00",
            "gateway_address": "10.1.4.1",
            "id": "projects/orangenoise-909/regions/us-west1/subnetworks/dev-subnet-us-west1",
            "ip_cidr_range": "10.1.4.0/22",
            "name": "dev-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "orangenoise-909",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/dev-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.devnet",
            "google_compute_network.mgmtnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mgmtsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-31T13:19:36.350-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/orangenoise-909/regions/us-west1/subnetworks/mgmt-subnet-us-west1",
            "ip_cidr_range": "10.1.0.0/22",
            "name": "mgmt-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-managemnet-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "orangenoise-909",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/mgmt-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prodsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-31T13:19:36.762-07:00",
            "gateway_address": "10.1.12.1",
            "id": "projects/orangenoise-909/regions/us-west1/subnetworks/prod-subnet-us-west1",
            "ip_cidr_range": "10.1.12.0/22",
            "name": "prod-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-prod-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "orangenoise-909",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/prod-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.prodnet",
            "google_project.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "stagesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-31T13:19:37.514-07:00",
            "gateway_address": "10.1.8.1",
            "id": "projects/orangenoise-909/regions/us-west1/subnetworks/staging-subnet-us-west1",
            "ip_cidr_range": "10.1.8.0/22",
            "name": "staging-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/global/networks/orangenoise-staging-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "orangenoise-909",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/orangenoise-909/regions/us-west1/subnetworks/staging-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mgmtnet",
            "google_compute_network.stagingnet",
            "google_project.project"
          ]
        }
      ]
    }
  ]
}